# cpplib

./: .gitignore  CMakeLists.txt  README.md
cpplib/: cpplib.hpp  env.hpp
cpplib/log/: logger.hpp
cpplib/util/: defer.hpp  error.hpp  filepath.hpp
src/: CMakeLists.txt  env.cpp
src/log/: logger.cpp
test/: CMakeLists.txt
test/log/: CMakeLists.txt  log_test.cpp
test/util/: CMakeLists.txt  util_test.cpp
